# CS2_C_FinalTask

./: CMakeLists.txt  README.md  a.out  main  main.c  student.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
